--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^3.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "victory": "^35.10.0",
     "web-vitals": "^0.2.2"
