--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
     "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
+    "es6-shim": "^0.35.6",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
     "react-currency-format": "^1.0.0",
